# react-native-pager-view

./: .eslintrc.js  .flowconfig  .gitignore  .npmignore  .npmrc  .prettierrc.js  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  RNCViewpager.podspec  babel.config.js  bun.lockb  package-lock.json  package.json  react-native-community-viewpager.podspec  react-native-pager-view.podspec  react-native-viewpager.podspec  release-it.json  skills-lock.json  tsconfig.build.json  tsconfig.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.maestro/: README.md  smoke-test.yaml
android/: build.gradle  gradle.properties
example/: .detoxrc.json  .gitignore  Common.js  Gemfile  README.md  ViewPagerAndroidExample.android.js  ViewPagerAndroidExample.ios.js  ViewPagerExample.js  app.json  babel.config.js  bun.lockb  index.js  metro.config.js  package.json  react-native.config.js  utils.js
example-web/: app.json  metro.config.js  package.json
fabric-example/: app.json  package.json  tsconfig.json
fabricexample/: index.ts  package.json  react-native.config.js
harmony/: build-profile.json5  oh-package.json5  pager_view.har
harmony/pager_view/src/main/cpp/: CMakeLists.txt  ComponentDescriptors.h  EventEmitters.cpp  EventEmitters.h  Props.cpp  Props.h  RCTComponentViewHelpers.h  ShadowNodes.cpp  ShadowNodes.h  States.cpp  States.h  ViewPagerEventEmitRequestHandler.h  ViewPagerJSIBinder.h  ViewPagerNapiBinder.h  ViewPagerPackage.h
ios/: Extensions.swift  PagerGestureDelegate.swift  PagerScrollDelegate.swift  PagerView.swift  PagerViewProps.swift  (+34 more)
(+951 files in other folders)
